# hebpf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  hebpf.cc  hebpf_version.h.in  main.cc
benchmarks/: CMakeLists.txt
benchmarks/cmdline/: CMakeLists.txt  cmd_parser_benchmark.cc
deploy/: Dockerfile  docker-compose.yml
deploy/prometheus/: prometheus.yml
src/: CMakeLists.txt
src/callback/: callback.h  callback.tpp
src/cmdline/: CMakeLists.txt  cmd_parser.cc  cmd_parser.h  cmd_parser.tpp  cmdline.cc  cmdline.h  cmdline_config.h  cmdline_if.h
src/common/: CMakeLists.txt  assert.h  common.h  enum_name.hpp  except.cc  except.h  exception.cc  exception.h  stack_frame.cc  stack_frame.h
src/daemon/: CMakeLists.txt  config_watcher.cc  config_watcher.h  config_watcher_if.h  configs.cc  configs.hpp  configurable.h  daemon.cc  daemon.h  daemon_if.h  loader.cc  loader.h  loader_if.h
src/data/: CMakeLists.txt  kernel_data.cc  kernel_data.h  metrics.cc  metrics.h  queue.h  queue.tpp  queue_if.h
src/data/services/examples/: CMakeLists.txt
src/data/services/examples/usermode/: CMakeLists.txt  execve_event.cc  execve_event.h
src/ebpf/: CMakeLists.txt  ebpf_if.h  ebpf_if.tpp  ebpf_net_hook_if.cc  ebpf_net_hook_if.h  hello.bpf.c  hello.c  ringbuffer.cc  ringbuffer.h  ringbuffer_if.h  ringbuffer_manager.cc  ringbuffer_manager.h  tc_hook.cc  tc_hook.h  xdp_hook.cc  xdp_hook.h
src/except/: CMakeLists.txt  except.cc  except.h
src/fd/: CMakeLists.txt  fd.cc  fd.h  fd_if.h
src/inotify/: CMakeLists.txt  inotify.cc  inotify.h  inotify_fd.cc  inotify_fd.h  inotify_if.h  inotify_manager.cc  inotify_manager.h  inotify_manager_if.h
src/interface/: ebpf_if.h
src/io/: CMakeLists.txt  io.cc  io.h  io_if.h
src/log/: CMakeLists.txt  logger.cc  logger.h  logger.tpp
src/monitor/: CMakeLists.txt  monitor.cc  monitor.h  monitor_factory.cc  monitor_factory.h  monitor_factory_if.h  monitor_if.h  monitor_subscriber.cc  monitor_subscriber.h  monitor_subscriber_if.h
src/services/: CMakeLists.txt
src/services/acl/: CMakeLists.txt  acl.bpf.c  acl.bpf.h  acl.cc  acl.h  acl_rules.cc  acl_rules.h  acl_xdp.bpf.c  acl_xdp.cc  acl_xdp.h
src/services/examples/: CMakeLists.txt  README.md
src/services/examples/hello/: CMakeLists.txt  example_hello.bpf.c  example_hello.cc  example_hello.h
src/services/examples/usermode/: CMakeLists.txt  example_usermode.bpf.c  example_usermode.bpf.h  example_usermode.cc  example_usermode.h
src/services/hello/: CMakeLists.txt  hello.cc  hello.h
src/services/klog/: CMakeLists.txt  klog.bpf.h  klog.cc  klog.h  klog_helpers.bpf.h
src/signal/: CMakeLists.txt  signal.cc  signal.h  signal_if.h
src/subscribe/: publisher_if.h  subscriber_if.h
src/thread/: CMakeLists.txt  thread.cc  thread.h  thread_if.h
test/: CMakeLists.txt
test/cmdline/: CMakeLists.txt  cmd_parser_test.cc
test/services/examples/hello/: CMakeLists.txt  example_hello_test.cc
test/services/hello/: CMakeLists.txt  hello_test.cc
