add_subdirectory(cmdline)
add_subdirectory(common)
add_subdirectory(daemon)
add_subdirectory(data)
add_subdirectory(ebpf)
add_subdirectory(fd)
add_subdirectory(inotify)
add_subdirectory(io)
add_subdirectory(log)
add_subdirectory(monitor)
add_subdirectory(services)
add_subdirectory(signal)
add_subdirectory(thread)
